# chia.template

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
tests/: test_chia_template.py
