[tool.poetry]
name = "chia.template"
version = "0.1.0"
description = ""
authors = ["Rainforest Cheng <rainforestnick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
chia-dev-tools = "^1.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
